tests/sysy/valid/const_if_fold.sy
int main() {
    if (1 + 2 > 2) {
        return 7;
    }
    return 0;
}
