tests/sysy/invalid/string_literal.sy
int main() {
    "abc";
    return 0;
}
